--- a/justin/style.css
+++ b/justin/style.css
@@ -1,4 +1,10 @@
-
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
 
 
