--- a/Quizz/styles.css
+++ b/Quizz/styles.css
@@ -4,6 +4,8 @@ body {
   justify-content: center;
   align-items: center;
 background-color: #EFEBD2;
+flex-direction: column;
+gap: 2rem;
 }
 :root {
   --clr-primary: #37b;
@@ -165,10 +167,17 @@ background-color: #EFEBD2;
 }
 
 #heart-container {
-    position: absolute;
     top: 25%;
     padding: 1em;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#answers-div {
+    overflow: hidden;
+    width: auto;
+    height: auto;
+    position: absolute;
+    bottom: 10%;
 }
