--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h6 {
 
 main{
     margin: 0 5vw;
-    border: red 1px solid;
+    /* border: red 1px solid; */
 
     
 }
@@ -119,7 +119,8 @@ a{
 
 .container2,
 .container3,
-.container4 {
+.container4
+ {
     width: 55%; /* Ajustez la largeur selon vos besoins */
     margin: 10px;
     border-radius: 20px;
@@ -127,7 +128,7 @@ a{
     background: rgba(255, 255, 255, 0.7);
     font-size: 1.2rem;
     padding: 20px; /* Ajout de l'espacement interne (padding) */
-    box-shadow: 10px 5px 5px black;
+    box-shadow: 10px 10px 0px black;
 }
 
 .container2 {
@@ -147,7 +148,7 @@ a{
     justify-content: space-between;
     align-items: center;
     padding: 30px;
-    border: red solid 1px;
+    /* border: red solid 1px; */
     height: 400px;
 }
 
@@ -193,33 +194,60 @@ a{
     margin: 20px;  
     border-radius: 20px;
     box-shadow: 10px 10px 0px black;
+    color: black;
+    font-size: 1.5rem;
 }
 
 .haut_carte, .bas_carte{
     height: 50%;
-    border: solid 1px black;
+    /* border: solid 1px black; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0 50px;
 }
+
 .img_carte{
-    width: 70%;
-    height: 70%;
+    width: 200px;
+    height: 190px;
     border: solid black;
     border-radius: 20px;
 }
 
+
+.mb{
+    position: relative;
+    bottom: 20px;
+}
+
+
 /* --------------------- Template page -------------------- */
 
 .transport{
-    margin-top: 700px;
+    margin-top: 900px;
 }
 
 
-.trp_ros{
+.trp_rose{
     position: absolute;
-    width: 20%;
-    right: 0;
-    top : 600px;
+    right: 50;
+    top : 200px;
 }
+
+#size{
+    font-size: 3rem;
+}
+
+.container3{
+    margin: 70px;
+}
+
+.plane{
+    position: absolute;
+    top: 550px;
+    width: 500px;
+    right: -50px;
+    
+}
+
